--- a/products.html
+++ b/products.html
@@ -150,306 +150,22 @@
       </div>
     </nav>
 
-    <header>
-      <div class="container-lg">
-        <div class="parent">
-          <div class="cat_1"> 
-            <img src="images/spa-still-life-with-natural-elements.png" alt="">
-          </div>
-          <div class="cat_2">
-            <img src="images/delicious-candy-plate.png" alt="">
-          </div>
-          <div class="cat_3">
-            <img src="images/flat-lay-natural-medicinal-spices-herbs.png" alt="">
-          </div>
-        </div>
-    </header>
+    <div class="container-lg">
+        
+    </div>
 
-    <section class="category py-5">
-      <div class="container-lg">
-        <h5 class="title">
-          الفئات
-        </h5>
-        <div class="row gy-4 align-items-stretch pt-5">
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (94).svg" alt="">
-            </div>
-            <p>منتجات خاصة</p>
-          </div>
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (95).svg" alt="">
-            </div>
-            <p>التوابل</p>
-          </div>
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (97).svg" alt="">
-            </div>
-            <p>الأعشاب</p>
-          </div>
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (98).svg" alt="">
-            </div>
-            <p>زيوت طبيعية</p>
-          </div>
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (99).svg" alt="">
-            </div>
-            <p>مكسرات</p>
-          </div>
-          <div class="col-lg-2 col-md-3 col-4">
-            <div class="box">
-              <img src="images/svgexport-17 (96).svg" alt="">
-            </div>
-            <p>خامات حلوانية</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="products mb-5">
-      <div class="container-lg">
-        <div class="title-link">
-          <div>
-            <h5 class="title">
-              منتجات وصلت حديثا
-            </h5>
-          </div>
-          <a href="products.html">المزيد <i class="fa-solid fa-chevron-left"></i></a>
-        </div>
-        <div class="row row-cols-5">
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <span class="badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div class="card-title d-flex justify-content-center align-items-center gap-1">
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button data-bs-toggle="modal"
-                  href="#product-details"
-                  role="button">إضافة للسلة</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <!-- add the "invisible" class if there's no discount -->
-                <span class="invisible badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div class="card-title d-flex justify-content-center align-items-center gap-1">
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button data-bs-toggle="modal"
-                  href="#product-details"
-                  role="button">إضافة للسلة</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <!-- add the "invisible" class if there's no discount -->
-                <span class="invisible badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div class="card-title d-flex justify-content-center align-items-center gap-1">
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button data-bs-toggle="modal"
-                  href="#product-details"
-                  role="button">إضافة للسلة</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <!-- add the "invisible" class if there's no discount -->
-                <span class="invisible badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div class="card-title d-flex justify-content-center align-items-center gap-1">
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button data-bs-toggle="modal"
-                  href="#product-details"
-                  role="button">إضافة للسلة</button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <!-- add the "invisible" class if there's no discount -->
-                <span class="invisible badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div class="card-title d-flex justify-content-center align-items-center gap-1">
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button data-bs-toggle="modal"
-                  href="#product-details"
-                  role="button">إضافة للسلة</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="getOffer">
-      <div class="container-lg">
-        <div class="row align-items-center">
-          <div class="col-12 col-md-6">
-
-          </div>
-          <div class="col-12 col-md-6">
-            <div class="discoverOffer">
-              <h3>استكشف عروض متجرنا الآن</h3>
-              <a href="">تسوق الآن</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="subscribe py-5">
-      <div class="container-lg">
-        <div class="d-flex justify-content-between align-items-center">
-          <div class="feature">
-            <div class="f_img">
-              <img src="images/svgexport-6 - 2022-09-12T101445.088.svg" alt="">
-            </div>
-            <div class="f_desc">
-              <h5>الشحن السريع</h5>
-              <p>خلال 3 أيام</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="f_img">
-              <img src="images/svgexport-6 - 2022-09-12T101445.088.svg" alt="">
-            </div>
-            <div class="f_desc">
-              <h5>دعم فني</h5>
-              <p>24/7 اتصل بنا</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="f_img">
-              <img src="images/svgexport-6 - 2022-09-12T101445.088.svg" alt="">
-            </div>
-            <div class="f_desc">
-              <h5>إمكانية الدفع عند الإستلام</h5>
-              <p>وسائل دفع أمنة</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="f_img">
-              <img src="images/svgexport-6 - 2022-09-12T101445.088.svg" alt="">
-            </div>
-            <div class="f_desc">
-              <h5>عروض مميزة</h5>
-              <p>اكتشف عروضنا كل يوم</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="discover">
-
+    <div class="container-lg">
+        <nav style="--bs-breadcrumb-divider: '>>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">الرئيسية</a></li>
+              <li class="breadcrumb-item active" aria-current="page">المنتجات</li>
+            </ol>
+        </nav>
     </div>
 
     <section class="subscribe py-4">
       <div class="container-lg">
-        <div class="row align-items-center">
+        <div class="row gy-3 align-items-center">
           <div class="col-md-6">
             <div class="d-flex align-items-center gap-3 subscribe-info">
               <i class="fs-1 bi bi-envelope"></i>
