--- a/cart.html
+++ b/cart.html
@@ -137,7 +137,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="intro.html">
+                            <a href="profile.html">
                                 <i class="fa-solid fa-user"></i>
                             </a>
                         </li>
@@ -496,101 +496,101 @@
     <!-- footer -->
     <footer>
         <div class="container-lg">
-            <div class="mb-5 row gy-4 justify-content-between">
-                <div class="col-lg-3">
-                    <div class="logo">
-                        <img src="images/logo.svg" alt="" />
-                        <p>
-                            نتميز في الأصل بـتجارة التوابل والأعشاب ( العطارة ) حيث تمتد
-                            شهرتنا في مدينة المحلة الكبري منذ أنشاء أجدادنا أول فرع
-                            للعطارة ما قبل عام 1940 وعلي مدار العقود السابقة نتميز بالجودة
-                            المميزة التي تتوارثها الأجيال.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-auto col-lg-3">
-                    <h5>روابط هامة</h5>
-                    <ul class="span-2">
-                        <li>
-                            <a href="">من نحن</a>
-                        </li>
-                        <li>
-                            <a href="">اتصل بنا</a>
-                        </li>
-                        <li>
-                            <a href="">سياسة الارجاع</a>
-                        </li>
-                        <li>
-                            <a href="">الشروط والأحكام</a>
-                        </li>
-                        <li>
-                            <a href="">سياسة الخصوصية</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4 col-lg-3">
-                    <h5>خدمة العملاء</h5>
-                    <ul class="span-2">
-                        <li>
-                            <a href="">حسابي</a>
-                        </li>
-                        <li>
-                            <a href="">الطلبات</a>
-                        </li>
-                        <li>
-                            <a href="">العناويين</a>
-                        </li>
-                        <li>
-                            <a href="">سلة الشراء</a>
-                        </li>
-                        <li>
-                            <a href="">قائمة الطلبات</a>
-                        </li>
-                        <li>
-                            <a href="">تتبع طلبك</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-3 col-lg-2">
-                    <h5>تواصل معنا</h5>
-                    <ul>
-                        <li>
-                            <a href="">
-                                كلمنا :
-                                <span> 040-2240206</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                راسلنا :
-                                <span> 01030292804</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href=""> العنوان يكتب هنا </a>
-                        </li>
-                    </ul>
-                    <div class="social-icons">
-                        <a href="">
-                            <i class="fa-solid fa-phone"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-instagram"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-twitter"></i>
-                        </a>
-                        <a href="">
-                            <i class="fa-brands fa-facebook-f"></i>
-                        </a>
-                    </div>
-                </div>
+          <div class="mb-5 row gy-4 justify-content-between">
+            <div class="col-lg-3">
+              <div class="logo">
+                <img src="images/logo.svg" alt="" />
+                <p>
+                  نتميز في الأصل بـتجارة التوابل والأعشاب ( العطارة ) حيث تمتد
+                  شهرتنا في مدينة المحلة الكبري منذ أنشاء أجدادنا أول فرع
+                  للعطارة ما قبل عام 1940 وعلي مدار العقود السابقة نتميز بالجودة
+                  المميزة التي تتوارثها الأجيال.
+                </p>
+              </div>
             </div>
+            <div class="col-md-auto col-lg-3">
+              <h5>روابط هامة</h5>
+              <ul class="span-2">
+                <li>
+                  <a href="about.html">من نحن</a>
+                </li>
+                <li>
+                  <a href="contactUs.html">اتصل بنا</a>
+                </li>
+                <li>
+                  <a href="return.html">سياسة الارجاع</a>
+                </li>
+                <li>
+                  <a href="terms.html">الشروط والأحكام</a>
+                </li>
+                <li>
+                  <a href="terms.html">سياسة الخصوصية</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4 col-lg-3">
+              <h5>خدمة العملاء</h5>
+              <ul class="span-2">
+                <li>
+                  <a href="profile.html">حسابي</a>
+                </li>
+                <li>
+                  <a href="orders.html">الطلبات</a>
+                </li>
+                <li>
+                  <a href="addresses.html">العناويين</a>
+                </li>
+                <li>
+                  <a href="cart.html">سلة الشراء</a>
+                </li>
+                <li>
+                  <a href="favourite.html">المفضلة</a>
+                </li>
+                <li>
+                  <a href="orderTracking.html">تتبع طلبك</a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-3 col-lg-2">
+              <h5>تواصل معنا</h5>
+              <ul>
+                <li>
+                  <a href="">
+                    كلمنا :
+                    <span> 040-2240206</span>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    راسلنا :
+                    <span> 01030292804</span>
+                  </a>
+                </li>
+                <li>
+                  <a href=""> العنوان يكتب هنا </a>
+                </li>
+              </ul>
+              <div class="social-icons">
+                <a href="">
+                  <i class="fa-solid fa-phone"></i>
+                </a>
+                <a href="">
+                  <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="">
+                  <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="">
+                  <i class="fa-brands fa-facebook-f"></i>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="rights">
-            <p>2024 جميع الحقوق محفوظة لموقع سمارت فيجن</p>
+          <p>2024 جميع الحقوق محفوظة لموقع سمارت فيجن</p>
         </div>
-    </footer>
+      </footer>
 
     <!-- Modal -->
     <div class="modal fade" id="product-details" tabindex="-1" aria-labelledby="product-detailsLabel"
