--- a/orderTracking.html
+++ b/orderTracking.html
@@ -148,7 +148,7 @@
                 </a>
               </li>
               <li>
-                <a href="intro.html">
+                <a href="profile.html">
                   <i class="fa-solid fa-user"></i>
                 </a>
               </li>
