--- a/forgotPass.html
+++ b/forgotPass.html
@@ -148,7 +148,7 @@
                 </a>
               </li>
               <li>
-                <a href="intro.html">
+                <a href="profile.html">
                   <i class="fa-solid fa-user"></i>
                 </a>
               </li>
@@ -253,19 +253,19 @@
             <h5>روابط هامة</h5>
             <ul class="span-2">
               <li>
-                <a href="">من نحن</a>
+                <a href="about.html">من نحن</a>
               </li>
               <li>
-                <a href="">اتصل بنا</a>
+                <a href="contactUs.html">اتصل بنا</a>
               </li>
               <li>
-                <a href="">سياسة الارجاع</a>
+                <a href="return.html">سياسة الارجاع</a>
               </li>
               <li>
-                <a href="">الشروط والأحكام</a>
+                <a href="terms.html">الشروط والأحكام</a>
               </li>
               <li>
-                <a href="">سياسة الخصوصية</a>
+                <a href="terms.html">سياسة الخصوصية</a>
               </li>
             </ul>
           </div>
@@ -273,22 +273,22 @@
             <h5>خدمة العملاء</h5>
             <ul class="span-2">
               <li>
-                <a href="">حسابي</a>
+                <a href="profile.html">حسابي</a>
               </li>
               <li>
-                <a href="">الطلبات</a>
+                <a href="orders.html">الطلبات</a>
               </li>
               <li>
-                <a href="">العناويين</a>
+                <a href="addresses.html">العناويين</a>
               </li>
               <li>
-                <a href="">سلة الشراء</a>
+                <a href="cart.html">سلة الشراء</a>
               </li>
               <li>
-                <a href="">قائمة الطلبات</a>
+                <a href="favourite.html">المفضلة</a>
               </li>
               <li>
-                <a href="">تتبع طلبك</a>
+                <a href="orderTracking.html">تتبع طلبك</a>
               </li>
             </ul>
           </div>
@@ -319,7 +319,7 @@
                 <i class="fa-brands fa-instagram"></i>
               </a>
               <a href="">
-                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-x-twitter"></i>
               </a>
               <a href="">
                 <i class="fa-brands fa-facebook-f"></i>
