--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
         <div class="container-lg d-flex align-items-center">
           <div class="col-4 col-md-3">
             <div class="logo">
-              <img src="images/logo.svg" alt="" />
+              <a class="navbar-brand m-0" href="index.html">
+                  <img src="images/logo.svg" alt="الحناوي العطار">
+              </a>
             </div>
           </div>
           <div class="col-8 col-lg-6">
