--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
             <ul class="auth">
               <li>
-                <a href="favourits.html">
+                <a href="favourite.html">
                   <i class="bi bi-heart-fill"></i>
                 </a>
               </li>
