--- a/orderStatus.html
+++ b/orderStatus.html
@@ -147,7 +147,7 @@
             </div>
             <ul class="auth">
               <li>
-                <a href="favourits.html">
+                <a href="favourite.html">
                   <i class="bi bi-heart-fill"></i>
                 </a>
               </li>
