--- a/register.html
+++ b/register.html
@@ -143,7 +143,7 @@
             </div>
             <ul class="auth">
               <li>
-                <a href="favourits.html">
+                <a href="favourite.html">
                   <i class="bi bi-heart-fill"></i>
                 </a>
               </li>
