--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
           </div>
           <div class="col-md-5">
             <div class="about_img">
-              <img src="images/about.png" alt="" />
+              <img src="images/settings-1716022448.jpeg" alt="" />
             </div>
           </div>
         </div>
