--- a/invoice.html
+++ b/invoice.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="css/bootstrap.rtl.min.css" />
     <!-- <link rel="stylesheet" href="css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="css/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/nice-select.css" />
     <link rel="stylesheet" href="css/owl.carousel.min.css" />
@@ -24,20 +30,115 @@
   </head>
 
   <body>
+    <style>
+      /* --------== invoice page ==-------- */
+      .invoice {
+        padding-block: 2rem;
+      }
 
+      .invoice_logo img {
+        width: 180px;
+      }
+
+      .invoice .invoice_header .table tr * {
+        text-align: start;
+        color: #888888 !important;
+      }
+      .invoice .table-responsive {
+        padding-block: 2rem;
+        margin-block: 2rem;
+        border-top: 28px solid #a0cccf;
+        border-bottom: 28px solid #a0cccf;
+      }
+
+      /* .table>:not(caption)>*>* */
+      .invoice .table thead tr {
+        background: #e9e9e9;
+      }
+
+      .invoice .table tr * {
+        padding-block: 10px;
+        border: unset;
+        padding-inline-end: 25px;
+      }
+
+      .invoice .table tr td:first-child,
+      .table tr th:first-child {
+        border-radius: 0 8px 8px 0;
+        -webkit-border-radius: 0 8px 8px 0;
+        -moz-border-radius: 0 8px 8px 0;
+        -ms-border-radius: 0 8px 8px 0;
+        -o-border-radius: 0 8px 8px 0;
+      }
+
+      .invoice .table tr td:last-child,
+      .table tr th:last-child {
+        border-radius: 8px 0 0 8px;
+        -webkit-border-radius: 8px 0 0 8px;
+        -moz-border-radius: 8px 0 0 8px;
+        -ms-border-radius: 8px 0 0 8px;
+        -o-border-radius: 8px 0 0 8px;
+        color: var(--mint);
+      }
+
+      .invoice .table tbody tr:nth-child(even) {
+        background: #f5f5f5;
+      }
+
+      .prices tbody tr,
+      .invoice_num tbody tr,
+      .client_detail tbody tr {
+        background: transparent !important;
+      }
+      .prices tbody tr td {
+        color: var(--mint);
+      }
+      .prices tbody tr:last-of-type td {
+        background-color: var(--mint);
+      }
+      .prices tbody tr:last-of-type td {
+        color: #fff !important;
+        font-weight: bold;
+      }
+      @media (max-width: 600px) {
+        .invoice_logo img {
+          width: 125px;
+        }
+      }
+    </style>
     <main class="invoice">
       <div class="container-lg">
-        <div class="d-flex">
+        <div
+          class="invoice_header d-flex justify-content-between align-items-center"
+        >
           <div class="invoice_logo">
-            <img src="images/logo.svg" alt="">
-          </div>
-          <div class="invoice_num">
-
+            <img src="images/logo.svg" alt="" />
           </div>
           <div class="client_detail">
+            <table class="table">
+              <tbody>
+                <tr>
+                  <td>الاسم</td>
+                  <td>: محمد وائل ربيع</td>
 
+                  <td>رقم الاوردر</td>
+                  <td>: #78979</td>
+                </tr>
+                <tr>
+                  <td>رقم الجوال</td>
+                  <td>: 0106849321</td>
+
+                  <td>التاريخ</td>
+                  <td>: 2-5-2024</td>
+                </tr>
+                <tr>
+                  <td>العنوان</td>
+                  <td>: العنوان يكتب هنا</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-        </div> 
+        </div>
       </div>
       <div class="table-responsive">
         <div class="container-lg">
@@ -78,13 +179,30 @@
         </div>
       </div>
       <div class="container-lg">
-        <div class="prices">
-          
+        <div class="prices col-sm-5 col-md-3 ms-auto">
+          <table class="table">
+            <tbody>
+              <tr>
+                <td>المجموع</td>
+                <td>310 L.E</td>
+              </tr>
+              <tr>
+                <td>الخصم</td>
+                <td>30 L.E</td>
+              </tr>
+              <tr>
+                <td>التوصيل</td>
+                <td>50 L.E</td>
+              </tr>
+              <tr>
+                <td>الاجمالي</td>
+                <td>330 L.E</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </main>
-
-
 
     <!-- jQuery script -->
     <script src="js/jquery-3.6.0.min.js"></script>
