--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
       <div class="container-lg">
         <div class="parent">
           <div class="cat_1">
-            <img src="images/spa-still-life-with-natural-elements.png" alt="" />
+            <div class="owl-carousel">
+              <img src="images/spa-still-life-with-natural-elements.png" alt="" />
+              <img src="images/delicious-candy-plate.png" alt="" />
+            </div>
           </div>
           <div class="cat_2">
             <img src="images/delicious-candy-plate.png" alt="" />
@@ -250,7 +253,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p2.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -288,7 +291,43 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/خل_تفاح.png" alt="..." />
+                </div>
+                <div class="card-body p-0">
+                  <div
+                    class="card-title d-flex justify-content-center align-items-center gap-1"
+                  >
+                    <span class="card-cat">الزيوت</span>
+                    <span> | </span>
+                    <h6 class="">خل تفاح عضوي</h6>
+                  </div>
+                  <p class="card-price">
+                  <span>85 جنية</span>
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <button
+                    data-bs-toggle="modal"
+                    href="#product-details"
+                    role="button"
+                  >
+                    إضافة للسلة
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col mb-4">
+            <div class="product">
+              <div class="card">
+                <a href="productDetails.html" class="link"></a>
+                <!-- add the "invisible" class if there's no discount -->
+                <span class="invisible badge discount text-bg-dark">20%</span>
+                <button class="fav">
+                  <i class="bi bi-heart"></i>
+                </button>
+                <div class="card-img-top">
+                  <img src="images/p1.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -326,7 +365,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -364,45 +403,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
-                </div>
-                <div class="card-body p-0">
-                  <div
-                    class="card-title d-flex justify-content-center align-items-center gap-1"
-                  >
-                    <span class="card-cat">البهارات</span>
-                    <span> | </span>
-                    <h6 class="">بذور الكتان</h6>
-                  </div>
-                  <p class="card-price">
-                    السعر من <span>125 جنية</span>
-                    إلى
-                    <span> 700 جنية</span>
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <button
-                    data-bs-toggle="modal"
-                    href="#product-details"
-                    role="button"
-                  >
-                    إضافة للسلة
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col mb-4">
-            <div class="product">
-              <div class="card">
-                <a href="productDetails.html" class="link"></a>
-                <!-- add the "invisible" class if there's no discount -->
-                <span class="invisible badge discount text-bg-dark">20%</span>
-                <button class="fav">
-                  <i class="bi bi-heart"></i>
-                </button>
-                <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p4.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -476,7 +477,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p7.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -514,7 +515,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p6.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -552,7 +553,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p2.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -589,7 +590,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p8.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -627,7 +628,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p11.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -664,7 +665,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p9.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -702,7 +703,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p10.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -740,7 +741,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p12.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -778,7 +779,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p1.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -816,7 +817,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/p4.webp" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -924,7 +925,7 @@
                 <i class="bi bi-heart"></i>
               </button>
               <div class="card-img-top">
-                <img src="images/Mask Group 3.png" alt="..." />
+                <img src="images/p1.webp" alt="..." />
               </div>
               <div class="card-body p-0">
                 <div
