--- a/offers.html
+++ b/offers.html
@@ -343,7 +343,7 @@
                         <i class="bi bi-heart"></i>
                       </button>
                       <div class="card-img-top">
-                        <img src="images/Mask Group 3.png" alt="..." />
+                        <img src="images/زيتون-.jpg" alt="..." />
                       </div>
                       <div class="card-body p-0">
                         <div class="card-title d-flex justify-content-center align-items-center gap-1">
@@ -375,7 +375,7 @@
                         <i class="bi bi-heart"></i>
                       </button>
                       <div class="card-img-top">
-                        <img src="images/Mask Group 3.png" alt="..." />
+                        <img src="images/زيتون-.jpg" alt="..." />
                       </div>
                       <div class="card-body p-0">
                         <div class="card-title d-flex justify-content-center align-items-center gap-1">
@@ -407,7 +407,7 @@
                         <i class="bi bi-heart"></i>
                       </button>
                       <div class="card-img-top">
-                        <img src="images/Mask Group 3.png" alt="..." />
+                        <img src="images/زيتون-.jpg" alt="..." />
                       </div>
                       <div class="card-body p-0">
                         <div class="card-title d-flex justify-content-center align-items-center gap-1">
@@ -439,7 +439,7 @@
                         <i class="bi bi-heart"></i>
                       </button>
                       <div class="card-img-top">
-                        <img src="images/Mask Group 3.png" alt="..." />
+                        <img src="images/زيتون-.jpg" alt="..." />
                       </div>
                       <div class="card-body p-0">
                         <div class="card-title d-flex justify-content-center align-items-center gap-1">
@@ -471,7 +471,7 @@
                         <i class="bi bi-heart"></i>
                       </button>
                       <div class="card-img-top">
-                        <img src="images/Mask Group 3.png" alt="..." />
+                        <img src="images/زيتون-.jpg" alt="..." />
                       </div>
                       <div class="card-body p-0">
                         <div class="card-title d-flex justify-content-center align-items-center gap-1">
