--- a/productDetails.html
+++ b/productDetails.html
@@ -180,7 +180,7 @@
           <div class="col-md-6">
             <div class="p_img">
               <span class="badge discount text-bg-dark">20%</span>
-              <img src="images/product.png" alt="" />
+              <img src="images/p10.jpg" alt="" />
             </div>
           </div>
           <div class="col-md-6">
@@ -445,7 +445,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -483,7 +483,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -521,7 +521,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -559,7 +559,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
@@ -597,7 +597,7 @@
                   <i class="bi bi-heart"></i>
                 </button>
                 <div class="card-img-top">
-                  <img src="images/Mask Group 3.png" alt="..." />
+                  <img src="images/زيتون-.jpg" alt="..." />
                 </div>
                 <div class="card-body p-0">
                   <div
